--- a/notebooks/ODI_Cricket_Wrangle.ipynb
+++ b/notebooks/ODI_Cricket_Wrangle.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Investigation of ODI Cricket Data Through Machine Learning"
+    "# Investigation of ODI Cricket Data"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "\n",
     "There is a vast amount of data collected within cricket. Every ball bowled represents a potentially interesting data point (runs scored, wickets taken), and each has the potential to follow patterns. This project will attempt to identify these patterns through various machine learning techniques, and see what it really takes to win a cricket match.\n",
     "\n",
-    "In the One Day Internation (ODI) format, the team batting first will have 50 overs (6 balls in an over) to amas as higher score as possible whilst the other team attempt to take wickets and limit their score. The second team will then have 50 overs to try and chase down that score. Either team can lose a maximum of 10 wickets within the 50 over innings."
+    "In the One Day International (ODI) format, the team batting first will have 50 overs (6 balls in an over) to amas as higher score as possible whilst the other team attempt to take wickets and limit their score. The second team will then have 50 overs to try and chase down that score. Each 11 man team can lose a maximum of 10 wickets within the 50 over innings."
    ]
   },
   {
