Final notebook checkpoint with .html copies

--- a/notebooks/ODI_Cricket_Wrangle.ipynb
+++ b/notebooks/ODI_Cricket_Wrangle.ipynb
@@ -32,15 +32,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset we are focussing on is available to download from [this](https://www.kaggle.com/venky73/icc-cricket-world-cup-2019-analysis) Kaggle kernel. The data has been scraped from [https://www.espncricinfo.com/](https://www.espncricinfo.com/) and split into 6 dataframes contained within .csv files. File overview:\n",
+    "The dataset we are focussing on is available to download from [this](https://www.kaggle.com/venky73/icc-cricket-world-cup-2019-analysis) Kaggle kernel. The data has been scraped from [https://www.espncricinfo.com/](https://www.espncricinfo.com/) and split into 6 dataframes contained within .csv files. We'll focus on 2 of these datframes in this notebook:\n",
     "1. **ODI_Match_Results.csv** - Contains data regarding the teams involved, who won the toss and whether they chose to bat first or second, what the outcome of the match was, where and when it was played.\n",
     "1. **ODI_Match_Totals.csv** - Contains data regarding the scores achieved by each team, winning margin, match result, and some data regarding the teams involved, when and where the match played is repeated here.\n",
-    "1. **WC_players.csv** - Contains player information.\n",
-    "1. **Ground_Averages.csv** - Contains aggregated data from various cricket grounds around the world.\n",
-    "1. **Bowler_data.csv** - Contains bowling figures such as balls bowled, wickets taken and bowling economoy.\n",
-    "1. **Batsman_Data.csv** - Contains batting data such as balls faced, runs scored, strike rate, number of boundaries scored.\n",
     "\n",
-    "Initially, we'll focus on cleaning the first 2 dataframes above with the following questions in mind:\n",
+    "We'll clean these dataframe with the following questions in mind:\n",
     "1. Which team has the highest win percentage?\n",
     "1. Which teams are most successful in England?\n",
     "1. Given that a team wins the toss, what is the probability that they win the game?\n",
@@ -2590,7 +2586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_match_clean.to_csv('../Data/interim/ODI_match_clean.csv', index=False)"
+    "df_match_clean.to_csv('../Data/processed/ODI_match_clean.csv', index=False)"
    ]
   },
   {
@@ -5712,7 +5708,298 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_totals_clean.to_csv('../Data/interim/ODI_totals_clean.csv', index=False)"
+    "df_totals_clean.to_csv('../Data/processed/ODI_totals_clean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "Both dataframes have been restructured and cleaned with missing data added and written to .csv files. Here is an overview of each each file structure.\n",
+    "\n",
+    "**`df_match_clean`:**\n",
+    " - `match_id` - primary key unique match identifier\n",
+    " - `start_date` - date the game was played\n",
+    " - `team1` - country name\n",
+    " - `team2` - country name\n",
+    " - `ground` - the ground where the match was played\n",
+    " - `result` - the winning team for all completed games that were not tied.\n",
+    " - Each match represented by a single row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>team1</th>\n",
+       "      <th>team2</th>\n",
+       "      <th>ground</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3315</td>\n",
+       "      <td>2013-01-03</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Pakistan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3316</td>\n",
+       "      <td>2013-01-06</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>India</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3317</td>\n",
+       "      <td>2013-01-11</td>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Melbourne</td>\n",
+       "      <td>Australia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3318</td>\n",
+       "      <td>2013-01-11</td>\n",
+       "      <td>India</td>\n",
+       "      <td>England</td>\n",
+       "      <td>Rajkot</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3319</td>\n",
+       "      <td>2013-01-13</td>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>Sri Lanka</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   match_id  start_date      team1      team2     ground     result\n",
+       "0      3315  2013-01-03   Pakistan      India    Kolkata   Pakistan\n",
+       "1      3316  2013-01-06   Pakistan      India      Delhi      India\n",
+       "2      3317  2013-01-11  Sri Lanka  Australia  Melbourne  Australia\n",
+       "3      3318  2013-01-11      India    England     Rajkot    England\n",
+       "4      3319  2013-01-13  Sri Lanka  Australia   Adelaide  Sri Lanka"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_match_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`df_totals_clean`:**\n",
+    " - `match_id` - foreign key match identifier\n",
+    " - `start_date` - date the game was played\n",
+    " - `country` - the country who batted the innings\n",
+    " - `toss` - coin toss result\n",
+    " - `bat` - order in which the team batted\n",
+    " - `opposition` - the country who bowled the inngings\n",
+    " - `score_total` - amount of runs scored\n",
+    " - `wickets` - amount of wickets lost\n",
+    " - `overs` - length of innings\n",
+    " - `rpo` - runs score per over\n",
+    " - `result` - match result. Contains \"win, lose, tied, n/r\"\n",
+    " - `result_margin` - numerical winning margin in runs or wickets\n",
+    " - `result_method` - by what mechanism was the result determined\n",
+    " - Each match is represented by two rows, each innings is represented by a single row of data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>match_id</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>country</th>\n",
+       "      <th>toss</th>\n",
+       "      <th>bat</th>\n",
+       "      <th>opposition</th>\n",
+       "      <th>score_total</th>\n",
+       "      <th>wickets</th>\n",
+       "      <th>overs</th>\n",
+       "      <th>rpo</th>\n",
+       "      <th>result</th>\n",
+       "      <th>result_margin</th>\n",
+       "      <th>result_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3337</td>\n",
+       "      <td>2013-02-22</td>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>6.74</td>\n",
+       "      <td>won</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>runs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3337</td>\n",
+       "      <td>2013-02-22</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>won</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>runs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3339</td>\n",
+       "      <td>2013-02-24</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>won</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>5.46</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>wickets</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3339</td>\n",
+       "      <td>2013-02-24</td>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>274.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>won</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>wickets</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3340</td>\n",
+       "      <td>2013-02-26</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>won</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>West Indies</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>4.22</td>\n",
+       "      <td>lost</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>wickets</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   match_id  start_date      country  toss  bat   opposition  score_total  \\\n",
+       "0      3337  2013-02-22  West Indies  lost  1st     Zimbabwe        337.0   \n",
+       "1      3337  2013-02-22     Zimbabwe   won  2nd  West Indies        181.0   \n",
+       "2      3339  2013-02-24     Zimbabwe   won  1st  West Indies        273.0   \n",
+       "3      3339  2013-02-24  West Indies  lost  2nd     Zimbabwe        274.0   \n",
+       "4      3340  2013-02-26     Zimbabwe   won  1st  West Indies        211.0   \n",
+       "\n",
+       "   wickets  overs   rpo result  result_margin result_method  \n",
+       "0        4   50.0  6.74    won          156.0          runs  \n",
+       "1        9   50.0  3.62   lost          156.0          runs  \n",
+       "2        8   50.0  5.46   lost            7.0       wickets  \n",
+       "3        3   49.0  5.59    won            7.0       wickets  \n",
+       "4        9   50.0  4.22   lost            5.0       wickets  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_totals_clean.head()"
    ]
   }
  ],
